argocd/infrastructure/pihole/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.pihole.gregpakes.co.uk`) # change to your domain
      kind: Rule
      services:
        - name: pihole
          port: 80
    - match: Host(`pihole.gregpakes.co.uk`) # change to your domain
      kind: Rule
      services:
        - name: pihole
          port: 80
      middlewares:
        - name: default-headers
